# gamemode

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG  CHANGELOG.md  LICENSE.txt  Makefile  README.md  bootstrap.sh  meson.build  meson_options.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bash.yml  bootstrap-test.yaml  build-and-test.yml  exherbo-build.yml  shell.yml
common/: common-cpu.c  common-cpu.h  common-external.c  common-external.h  common-governors.c  common-governors.h  common-gpu.c  common-gpu.h  common-helpers.c  common-helpers.h  common-logging.c  common-logging.h  common-pidfds.c  common-pidfds.h  common-power.c  common-power.h  common-profile.c  common-profile.h  common-splitlock.c  common-splitlock.h  meson.build
daemon/: README.md  cpugovctl.c  daemon_config.c  daemon_config.h  daemonize.c  daemonize.h  dbus_messaging.c  dbus_messaging.h  external-helper.c  external-helper.h  gamemode-config.c  gamemode-config.h  gamemode-context.c  gamemode-cpu.c  gamemode-dbus.c  gamemode-env.c  gamemode-gpu.c  gamemode-ioprio.c  gamemode-proc.c  gamemode-sched.c  gamemode-tests.c  gamemode-wine.c  gamemode.c  gamemode.h  gamemoded.c  governors-query.c  governors-query.h  governors.c  governors.h  gpu-control.c  gpu-control.h  gpu-query.c  gpu-query.h  gpuclockctl.c  helpers.c  helpers.h  ioprio.h  logging.c  logging.h  main.c  (+1 more)
data/: 10-gamemode.conf.in  com.feralinteractive.GameMode.policy.in  com.feralinteractive.GameMode.service.in  cpugovctl_perms.sh  gamemode-simulate-game.1.in  gamemode.conf  gamemode.conf.in  gamemoded.1  gamemoded.8  gamemoded.8.in  gamemoded.service  gamemoded.service.in  gamemodelist  gamemodelist.1.in  gamemoderun  gamemoderun.1  gamemoderun.1.in  gamemoderun.in  io.github.feralinteractive.gamemode.metainfo.xml  meson.build
data/dbus/: com.feralinteractive.GameMode.service.in
data/polkit/actions/: com.feralinteractive.GameMode.policy.in
data/polkit/rules.d/: gamemode.rules.in
data/systemd/user/: gamemoded.service.in
example/: gamemode.ini  gamemoded.desktop  main.c  meson.build
example/archlinux/: readme.txt
example/archlinux/gamemode-git/: PKGBUILD
lib/: client_impl.c  client_loader.c  gamemode_client.h  meson.build
scripts/: format-check.sh  git-archive-all.sh  mkrelease.sh  static-analyser-check.sh
subprojects/: inih.wrap
util/: cpucorectl.c  cpugovctl.c  gpuclockctl.c  meson.build  platprofctl.c  procsysctl.c  x3dmodectl.c
